# center_of_mass

./: .gitignore  .rdmanifest  CMakeLists.txt  Jenkinsfile  README.md  package.xml
launch/: com.launch
src/center_of_mass/: com.py
