<?xml version="1.0"?>
<package format="2">
  <name>center_of_mass</name>
  <version>0.0.0</version>
  <description>Calculates the CoM and publishes result as marker msg on /com</description>

  <maintainer email="5flemmin@informatik.uni-hamburg.de">Tanja Flemming</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <author email="5flemmin@informatik.uni-hamburg.de">Tanja Flemming</author>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>urdfdom_py</exec_depend>
  <exec_depend>rospy</exec_depend>


  <export>
    <bitbots_documentation>
      <language>python</language>
      <status>unknown</status>
    </bitbots_documentation>
  </export>
</package>
