<?xml version="1.0"?>
<package format="2">
  <name>center_of_mass</name>
  <version>0.0.1</version>
  <description>Calculates the CoM and publishes result as marker msg on /com</description>

  <maintainer email="5flemmin@informatik.uni-hamburg.de">Tanja Flemming</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <author email="5flemmin@informatik.uni-hamburg.de">Tanja Flemming</author>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>urdfdom_py</depend>
  <depend>rospy</depend>


  <export>
    <bitbots_documentation>
      <language>python</language>
      <status>unknown</status>
    </bitbots_documentation>
  </export>
</package>
